refactor: minor BatchCloneFinder decoupling